--- a/cs.css
+++ b/cs.css
@@ -24,7 +24,7 @@
       background-size: contain;
       background-position: center center;
       background-repeat: repeat;
-      background-image: url("_awso/assets/grid.png");
+      background-image: url("https://lobby.mom/awso/assets/grid.png");
       line-height: 1.7em;
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
