--- a/cs.css
+++ b/cs.css
@@ -150,7 +150,7 @@
       border-radius: 50%;
       border: 2px solid #00a261;
       margin-right: 15px;
-      background: #363843;
+      background: linear-gradient(90deg,rgba(39, 67, 168, 1) 35%, rgba(0, 212, 255, 1) 100%);
       display: flex;
       align-items: center;
       justify-content: center;
