--- a/cs.css
+++ b/cs.css
@@ -148,9 +148,10 @@
       width: 48px;
       height: 48px;
       border-radius: 50%;
-      border: 2px solid #00a261;
+      border: 2px solid rgba(38, 39, 47, 0.7);
+        outline: 2px solid #00a261;
       margin-right: 15px;
-      background: linear-gradient(90deg,rgba(39, 67, 168, 1) 35%, rgba(0, 212, 255, 1) 100%);
+      background: linear-gradient(0deg,rgba(39, 67, 168, 1) 35%, rgba(0, 212, 255, 1) 100%);
       display: flex;
       align-items: center;
       justify-content: center;
